bin_PROGRAMS = velbusd

velbusd_SOURCES = velbusd.cpp \
                  VelbusMessage/VelbusMessage.hpp VelbusMessage/VelbusMessage.cpp \
                  VelbusMessage/Registrar.hpp VelbusMessage/Registrar.cpp \
                  VelbusMessage/Unknown.cpp VelbusMessage/Unknown.hpp \
                  VelbusMessage/BusOff.cpp VelbusMessage/BusOff.hpp \
                  VelbusMessage/BusActive.cpp VelbusMessage/BusActive.hpp \
                  VelbusMessage/RxBuffFull.cpp VelbusMessage/RxBuffFull.hpp \
                  VelbusMessage/RxReady.cpp VelbusMessage/RxReady.hpp \
                  VelbusMessage/IntStatusRequest.cpp VelbusMessage/IntStatusRequest.hpp \
                  utils/output.hpp utils/output.cpp \
                  utils/TimestampLog.hpp utils/TimestampLog.cpp \
                  utils/Registrar.t \
                  SockAddr.hpp SockAddr.cpp \
                  Socket.hpp Socket.cpp
