noinst_LIBRARIES = libvelbusmessage.a

libvelbusmessage_a_SOURCES = PushButtonStatus.hpp PushButtonStatus.cpp \
                             SetLeds.hpp SetLeds.cpp \
                             ClearLeds.hpp ClearLeds.cpp \
                             SlowBlinkLeds.hpp SlowBlinkLeds.cpp \
                             FastBlinkLeds.hpp FastBlinkLeds.cpp \
                             VFastBlinkLeds.hpp VFastBlinkLeds.cpp \
                             RelayStatus.hpp RelayStatus.cpp
